--- a/templates/two.html
+++ b/templates/two.html
@@ -1,7 +1,6 @@
 
 <!-- Creating one step. Start tour. Simon -->
-
-<div id="first">
+<div class="first">
 	<a name="zeroStep"></a>
 	<div id="zeroStep" class="container">
 		<h4><br><br><br><br><br></h4>
@@ -10,7 +9,7 @@
 	</div>
 </div>
 
-<div id="first">
+<div class="first">
 	<a name="firstStep"></a>
 	<div id="firstStep" class="container">
 		<h4><br><br><br></h4>
@@ -26,7 +25,7 @@
 	</div>
 </div>
 
-<div id="first">
+<div class="first">
 	<a name="secondStep"></a>
 	<div id="secondStep" class="container">
 		<p><br><br><br></p>
@@ -41,7 +40,7 @@
 	</div>
 </div>
 
-<div id="first">
+<div class="first">
 	<a name="thirdStep"></a>
 	<div id="thirdStep" class="container">
 	<h3><br><br></h3>
@@ -56,7 +55,7 @@
 	</div>
 </div>
 
-<div id="first">
+<div class="first">
 	<a name="fourthStep"></a>
 	<div id="fourthStep" class="container">
 		<h4><br><br><br><br></h4>
@@ -71,7 +70,7 @@
 	</div>
 </div>
 
-<div id="first">
+<div class="first">
 	<a name="fifthStep"></a>
 	<div id="fifthStep" class="container">
 		<h4><br><br><br><br></h4>
@@ -89,7 +88,7 @@
 
 
 
-<div id="first">
+<div class="first">
 	<a name="sixthStep"></a>
 	<div id="sixthStep" class="container">
 		<h4><br></h4>
@@ -107,15 +106,17 @@
 	</div>
 </div>
 
-
+<div id="lastButton" class="container">
 <a ui-sref="three">
-	<div id="done" class="card-panel light-blue darken-2">
+	<div id="done" class="card-panel light-blue darken-2 container">
 		<h3 class="text-center white-text">Reasonable?</h3>
-		<h5 class="text-center white-text">Well, let's keep move on!</h5>
+		<h5 class="text-center white-text">Well, let's keep moving!</h5>
 	</div>
 </a>
+</div>
 <a name="seventhStep"></a>
 
 </div>
 </div>
+
 
