fixed button on three.html

--- a/templates/three.html
+++ b/templates/three.html
@@ -73,8 +73,8 @@ tour.addstep('second', {
 			</div>
 		</div>
 	</div>
-		<div id="finalbutton"class="container">
-		<a ui-sref="two">
+		<div id="finalbutton" class="container big-button">
+		<a ui-sref="four">
 			<div id="done" class="card-panel light-blue darken-2">
 				<h3 class="text-center white-text">Done?</h3>
 				<h5 class="text-center white-text">Good, let's move onto harder ish</h5>
