some style changes

--- a/templates/three.html
+++ b/templates/three.html
@@ -76,8 +76,8 @@ tour.addstep('second', {
 		<div id="finalbutton" class="container big-button">
 		<a ui-sref="four">
 			<div id="done" class="card-panel light-blue darken-2">
-				<h3 class="text-center white-text">Done?</h3>
-				<h5 class="text-center white-text">Good, let's move onto harder ish</h5>
+				<h3 class="text-center white-text">Good</h3>
+				<h5 class="text-center white-text">Let's move on to lesson 4</h5>
 				<!-- <a ui-sref="two" class="btn-large waves-effect waves-light white light-blue-text darken-2-text">Lesson Two</a> -->
 			</div>
 		</a>
