--- a/templates/three.html
+++ b/templates/three.html
@@ -40,7 +40,7 @@ tour.addstep('start', {
 tour.addstep('second', {
 	title: 'Lets try adding a step with 2 buttons',
 	text: 'you can simply add buttons by inserting more inside the step button method',
-	attachTo: 'element bottom',
+	attachTo: 'element right',
 	classes: 'shepherd-theme-arrows',
 	scrollTo: true
 	buttons: [
