--- a/templates/one.html
+++ b/templates/one.html
@@ -31,7 +31,7 @@
 			<!-- <p>This is the <code>Panel</code> constructor:</p> -->
 			<pre><code class="language-javascript">
 var tour;
-tour = new Shepherd.tour({
+tour = new Shepherd.Tour({
 	defaults: {
 		classes: 'shepherd-theme-arrows',
 		scrollTo: true
