--- a/templates/three.html
+++ b/templates/three.html
@@ -42,7 +42,7 @@ tour.addstep('second', {
 	text: 'you can simply add buttons by inserting more inside the step button method',
 	attachTo: 'element bottom',
 	classes: 'shepherd-theme-arrows',
-	scrollTo: true
+	scrollTo: true,
 	buttons: [
 		{
 			text: 'Back',
